[FIX] overflow

--- a/src/app/components/card/card.component.scss
+++ b/src/app/components/card/card.component.scss
@@ -47,7 +47,7 @@
         }
 
         h2 {
-            text-align: start;
+            text-align: end;
         }
     }
 
