--- a/src/styles.scss
+++ b/src/styles.scss
@@ -73,8 +73,6 @@ body {
     background-color: var(--neutral-color-lighter);
     color: var(--neutral-color-darker);
 
-    overflow-inline: hidden;
-
     line-height: 1;
 
     button {
